--- a/src/pages/styles/homeStyle.css
+++ b/src/pages/styles/homeStyle.css
@@ -22,259 +22,114 @@
   z-index: 5;
   transition: top 0.40s ease;
 }
-  
-  #homeSlide {
-    width: 100vw;
-    position: fixed;
-    bottom: 11px;
-    left: 10px;
-    width: calc(100vw - 20px);
-    height: calc(var(--app-height) - 32px);
-    position: absolute;
-    background-color: black;
-    transform-origin: bottom;
-    transform: scaleY(0);    
-    transition: transform 0.4s ease;
-    border-radius: 10px;
-    overflow: scroll;
-    overflow-x: hidden;
+
+#homeSlide {
+  width: 100vw;
+  position: fixed;
+  bottom: 11px;
+  left: 10px;
+  width: calc(100vw - 20px);
+  height: calc(var(--app-height) - 32px);
+  position: absolute;
+  background-color: black;
+  transform-origin: bottom;
+  transform: scaleY(0);
+  transition: transform 0.4s ease;
+  border-radius: 10px;
+  overflow: scroll;
+  overflow-x: hidden;
+}
+
+#profilePic {
+  margin-left: 25px;
+  width: 25px;
+  height: 25px;
+}
+
+#footTitle {
+  color: white;
+  margin-left: 15px;
+  font-weight: bold;
+  font-size: 14px;
+}
+
+#upBtnArea {
+  width: 80px;
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  position: absolute;
+  right: 0px;
+}
+
+#upBtn {
+  width: 22px;
+  position: absolute;
+  right: 20px;
+  cursor: pointer;
+  transition: transform 0.3s ease;
+}
+
+#portfolioGrid {
+  width: calc(100% - 60px);
+  margin-left: 20px;
+  margin-top: 55px;
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+  grid-gap: 20px 40px;
+  padding-bottom: 40px;
+}
+
+.sitePreview {
+  width: 100%;
+  padding: 10px;
+  height: 310px;
+  background-color: rgb(23, 23, 23);
+  border-radius: 8px;
+  text-align: left;
+  cursor: pointer;
+}
+
+.siteImgPreview {
+  width: 100%;
+  height: 230px;
+  object-fit: cover;
+  border-radius: 4px;
+}
+
+.siteName {
+  font-weight: bold;
+  margin-top: 15px;
+  font-size: 18px;
+  margin-left: 10px;
+}
+
+.siteDescription {
+  margin-left: 10px;
+  width: calc(100% - 20px);
+  margin-top: 5px;
+  color: rgb(198, 198, 198);
+}
+
+@media only screen and (max-width: 1100px) {
+  #portfolioGrid {
+    grid-template-columns: 1fr 1fr;
   }
-  
-  #itemArea {
-    margin-top: 40px;
-    width: 100%;
-    height: 100%;
-    overflow: scroll;
-    overflow-x: hidden;
-    transition: opacity 0.5s ease;
-    opacity: 100%;
+}
+
+@media only screen and (max-width: 800px) {
+  #portfolioGrid {
+    grid-template-columns: 1fr;
+  }
+}
+
+@media only screen and (max-width: 500px) {
+  .sitePreview {
+    height: 260px;
   }
 
-  #block {
-    width: 100%;
-    height: 80px;
+  .siteImgPreview {
+    height: 170px;
   }
-  
-  /* #mainFooter:hover #bg {
-    transform: scaleY(1);    
-  } */
-  
-  #logo {
-    width: 28px;
-    height: 28px;
-    margin-left: 20px;
-  }
-
-  #profilePic {
-    margin-left: 25px;
-    /* border-radius: 50%; */
-    width: 25px;
-    height: 25px;
-  }
-  
-  #footTitle {
-    color: white;
-    margin-left: 15px;
-    font-weight: bold;
-    font-size: 14px;
-  }
-
-  #upBtnArea {
-    width: 80px;
-    height: 100%;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    position: absolute;
-    right: 0px;
-  }
-  
-  #upBtn {
-    width: 22px;
-    position: absolute;
-    right: 20px;
-    cursor: pointer;
-    transition: transform 0.3s ease;
-  }
-   
-  .indeximage {
-    position: absolute;
-    display: block;
-    top: 0;
-    left: 0;
-    bottom: 0;
-    background: url("../../assets/pattern.png")center center;
-    width: 110vw !important;
-    height: 110vh !important;
-    overflow: hidden !important;
-    object-fit: cover;
-    background-size: cover; 
-  }
-  
-  .indeximage {
-    position: fixed;
-    top: 45%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    transition: .15s linear;
-    overflow: hidden;
-    height: 120vh;
-    min-width: 100vw;
-    object-fit: cover;
-    display: none;
-  }
-  
-  .indexOuter {
-    position: fixed;
-    top: -200px;
-    height: 100vh !important;
-    width: 100vw !important;
-    overflow: hidden !important;
-    cursor: pointer;
-  }
-
-  #itemPage {
-    margin-top: 80px;
-    text-align: initial;
-  }
-
-  #productImageArea {
-    position: relative;
-    width: 40%;
-    height: calc(100vh - 220px);
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    float: left;
-    text-align: center;
-  }
-
-  #productImage {
-    width: 450px;
-    max-width: 95vw;
-  }
-
-  #productImageBtnsFlex {
-    width: 100%;
-    display: flex;
-    justify-content: center;
-  }
-
-  #productImageBtns {
-    bottom: 0px;
-    width: 300px;
-    display: flex;
-    justify-content: space-between;
-  }
-
-  .productImageBtn {
-    width: 40px;
-    height: 6px;
-    border: solid 1px white;
-    cursor: pointer;
-    border-radius: 8px;
-  }
-
-  #productInfoOuter {
-    float: right;
-    width: calc(60%);
-    height: calc(100vh - 220px);
-    display: flex;
-    justify-content: center;
-    align-items: center;
-  }
-
-  #productInfo {
-    text-align: center;
-    width: 500px;
-    max-width: 80vw;
-  }
-
-  #sizeBtns {
-    width: 100%;
-    display: flex;
-    justify-content: space-between;
-    margin-top: 50px;
-  }
-
-  .sizeBtn {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    border: solid 1px white;
-    width: 60px;
-    height: 23px;
-    font-size: 12px;
-    border-radius: 12px;
-    cursor: pointer;
-  }
-
-  #selectedSize {
-    color: black;
-    background-color: white;
-  }
-  
-  #productTitle {
-    font-weight: bold;
-    font-size: 20px;
-    text-transform: uppercase;
-  }
-
-  #productTitle2 {
-    font-weight: bold;
-    font-size: 20px;
-    text-transform: uppercase;
-    display: none;
-    justify-content: center;
-  }
-
-  #productDescription {
-    margin-top: 50px;
-  }
-
-  #paypalBtnArea {
-    margin-top: 60px;
-  }
-
-  @media only screen and (max-width: 1050px) {
-    #productImageArea {
-      position: relative;
-      width: 100%;
-      height: initial;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      margin-top: 0px;
-      /* background-color: blue; */
-    }
-
-    #productInfoOuter {
-      float: right;
-      width: 100%;
-      height: initial;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      padding-bottom: 40px;
-    }
-
-    #sizeBtns {
-      width: 100%;
-      display: flex;
-      justify-content: space-between;
-      margin-top: 20px;
-    }
-
-    #productTitle {
-      display: none;
-    }
-  
-    #productTitle2 {
-      font-weight: bold;
-      font-size: 20px;
-      text-transform: uppercase;
-      display: flex;
-    }
-  
-  }
-  
+}
